--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <img src="/images/Hitler.jpg" class="header-pic" alt="picture collage of fabi">
             <div class="header-title">
                 <h2>Furball Fabi's</h2>
-            <h1>Fabulous Meme Generator</h1>
+                <h1 class="enlarge">Fabulous</h1>
+                <h1>Meme Generator</h1>
             </div>
             
         </div>
