meme radios and checkbox html

--- a/index.html
+++ b/index.html
@@ -18,11 +18,21 @@
                 <h2>Furball Fabi's</h2>
                 <h1 class="enlarge">Fabulous</h1>
                 <h1>Meme Generator</h1>
-            </div>
-            
+            </div>            
         </div>
     </header>
-    <main></main>
+
+    <main>
+        <div class="emotion-container" id="emotion-container">
+            <div class="emotion-radios" id="emotion-radios"></div>
+            <div class="gifs-check">
+                <label for="gif-only" id="gif-only-label"></label>
+                <input type="checkbox" class="gif-only" id="gif-only">
+            </div>
+            <button>Get Image</button>
+        </div>
+    </main>
+
     <footer></footer>
 
     <script src="index.js" type="module"></script>
