function including emotion only if it is not already present in array

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="emotion-container" id="emotion-container">
             <div class="emotion-radios" id="emotion-radios"></div>
             <div class="gifs-check">
-                <label for="gif-only" id="gif-only-label"></label>
+                <label for="gif-only" id="gif-only-label">Gif only images</label>
                 <input type="checkbox" class="gif-only" id="gif-only">
             </div>
             <button>Get Image</button>
