improved look of labels and radio buttons

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </header>
 
     <main>
+        <h3>How are you feeling?</h3>
         <div class="emotion-container" id="emotion-container">
             <div class="emotion-radios" id="emotion-radios"></div>
             <div class="gifs-check">
