Created image container

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
         </div>
     </main>
 
+    <section>
+        <div class="image-reel-container" id="image-reel-container">
+            <div class="close-images" id="close-images">X</div>
+            <div class="image-cont" id="image-cont"></div>
+            <div class="copy-image-cont" id="copy-image-cont">
+                <button class="copy-image-btn" id="copy-image-btn">Copy</button>
+            </div>
+        </div>
+    </section>
+
     <footer></footer>
 
     <script src="index.js" type="module"></script>
