--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <label for="gif-only" id="gif-only-label">Gif only images</label>
                 <input type="checkbox" class="gif-only" id="gif-only">
             </div>
-            <button>Get Image</button>
+            <button id="get-images-btn">Get Image</button>
         </div>
     </main>
 
